@@ -3,6 +3,9 @@ Development
 * No longer include behat.local.yml by default.  Use default settings for `drush rs` (127.0.0.1:8888) for behat base_url.
 * Use default settings for `drush rs` (127.0.0.1:8888) for phantomas base url.
 * Add csso for CSS optimization.
+* Rename build:fonts to build:copy.
+* Add imagemin option to build:copy task.
+
 
 1.0.0-beta1, 2016-08-14
 -----------------------
